--- a/src/pages/LandingPage/CtaSection/styles.module.scss
+++ b/src/pages/LandingPage/CtaSection/styles.module.scss
@@ -33,3 +33,87 @@
     }
   }
 }
+
+@media (max-width: 480px) {
+  .ctaSection {
+    padding: 4rem 1rem;
+
+    .container {
+      padding: 2rem 3rem;
+
+      h1 {
+        font-size: 3rem;
+        text-align: center;
+      }
+
+      p {
+        font-size: 1rem;
+        margin-bottom: 32px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .ctaSection {
+    padding: 4rem 1rem;
+
+    .container {
+      padding: 2rem 3rem;
+
+      h1 {
+        font-size: 3rem;
+        text-align: center;
+      }
+
+      p {
+        font-size: 1rem;
+        margin-bottom: 32px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .ctaSection {
+    padding: 4rem 1rem;
+
+    .container {
+      padding: 2rem 3rem;
+
+      h1 {
+        font-size: 3rem;
+        text-align: center;
+      }
+
+      p {
+        font-size: 1rem;
+        margin-bottom: 32px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .ctaSection {
+    padding: 4rem 1rem;
+
+    .container {
+      padding: 2rem 3rem;
+
+      h1 {
+        font-size: 4rem;
+        text-align: center;
+      }
+
+      p {
+        font-size: 1rem;
+        margin-bottom: 32px;
+        text-align: center;
+      }
+    }
+  }
+}
